tests/ui/imports/issue-1697.stderr
error[E0432]: unresolved import `unresolved`
  --> $DIR/issue-1697.rs:3:5
   |
LL | use unresolved::*;
   |     ^^^^^^^^^^ you might be missing crate `unresolved`
   |
   = help: consider adding `extern crate unresolved` to use the `unresolved` crate

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0432`.
